--- a/Haiku/haiku.html
+++ b/Haiku/haiku.html
@@ -286,9 +286,10 @@
 		<div class="sheet-header sheet-col60">
 
             <!-- SPECIAL ABILITIES -->
-                        <div class="sheet-advancement-header sheet-flex sheet-blackheader">
-				<div class="sheet-advancement-xpholder">
 					<!-- XP DO NOT SPACE -->
+					<div class="sheet-col100 sheet-flex sheet-blackheader">
+						<div class = "sheet-label">Playbook XP</div>
+						<div class="sheet-stress2 ">
 					<input type="radio" value="0" name="attr_playbook_xp" class="sheet-tooth sheet-zero" checked/><span></span><input type="radio" value="1" name="attr_playbook_xp" class="sheet-tooth sheet-xptooth"/><span></span><input type="radio" value="2" name="attr_playbook_xp" class="sheet-tooth sheet-xptooth"/><span></span><input type="radio" value="3" name="attr_playbook_xp" class="sheet-tooth sheet-xptooth"/><span></span><input type="radio" value="4" name="attr_playbook_xp" class="sheet-tooth sheet-xptooth"/><span></span><input type="radio" value="5" name="attr_playbook_xp" class="sheet-tooth sheet-xptooth"/><span></span><input type="radio" value="6" name="attr_playbook_xp" class="sheet-tooth sheet-xptooth"/><span></span><input type="radio" value="7" name="attr_playbook_xp" class="sheet-tooth sheet-xptooth"/><span></span><input type="radio" value="8" name="attr_playbook_xp" class="sheet-tooth sheet-xptooth"/><span></span>
 				</div>
 			</div>
@@ -325,8 +326,8 @@
 		</div>
 		<!-- Attributes columns -->
 		<div class="sheet-col40">
-				<div class="sheet-col100 sheet-flex">
-						<div class = "sheet-label sheet-blackheader">Grade</div>
+				<div class="sheet-col100 sheet-flex sheet-blackheader">
+						<div class = "sheet-label">Grade</div>
 						<div class="sheet-stress2 ">
 						<input type="radio" value="0" name="attr_grade" class="sheet-tooth sheet-zero" checked/><span></span><input type="radio" value="1" name="attr_grade" class="sheet-tooth sheet-xptooth"/><span></span><input type="radio" value="2" name="attr_grade" class="sheet-tooth sheet-xptooth"/><span></span><input type="radio" value="3" name="attr_grade" class="sheet-tooth sheet-xptooth"/><span></span><input type="checkbox" name="attr_setting_extra_stress" class="sheet-hidden sheet-extra-stress" value="0" checked/><input type="radio" value="10" name="attr_grade" class="sheet-tooth sheet-xptooth"/><span></span><input type="checkbox" name="attr_setting_extra_stress" class="sheet-hidden sheet-extra-stress" value="1"/><input type="radio" value="11" name="attr_grade" class="sheet-tooth sheet-xptooth"/><span></span><input type="checkbox" name="attr_setting_extra_stress" class="sheet-hidden sheet-extra-stress" value="2"/><input type="radio" value="12" name="attr_grade" class="sheet-tooth sheet-xptooth"/><span></span>
 						</div>
