--- a/Haiku/haiku.html
+++ b/Haiku/haiku.html
@@ -221,19 +221,20 @@
 				</div>
 			</div>
             <!-- STRESS DON'T SPACE OUT -->
-			<div class="sheet-blackheader sheet-stress2 ">
+			<div class="sheet-blackheader sheet-stress3 ">
                 <span></span>
 				<input type="radio" value="0" name="attr_stress" class="sheet-tooth sheet-zero" checked/><span></span><input type="radio" value="1" name="attr_stress" class="sheet-tooth sheet-xptooth"/><span></span><input type="radio" value="2" name="attr_stress" class="sheet-tooth sheet-xptooth"/><span></span><input type="radio" value="3" name="attr_stress" class="sheet-tooth sheet-xptooth"/><span></span><input type="radio" value="4" name="attr_stress" class="sheet-tooth sheet-xptooth"/><span></span><input type="radio" value="5" name="attr_stress" class="sheet-tooth sheet-xptooth"/><span></span><input type="radio" value="6" name="attr_stress" class="sheet-tooth sheet-xptooth"/><span></span><input type="radio" value="7" name="attr_stress" class="sheet-tooth sheet-xptooth"/><span></span><input type="checkbox" name="attr_setting_extra_stress" class="sheet-hidden sheet-extra-stress" value="0" checked/><input type="radio" value="10" name="attr_stress" class="sheet-tooth sheet-xptooth"/><span></span><input type="checkbox" name="attr_setting_extra_stress" class="sheet-hidden sheet-extra-stress" value="1"/><input type="radio" value="11" name="attr_stress" class="sheet-tooth sheet-xptooth"/><span></span><input type="checkbox" name="attr_setting_extra_stress" class="sheet-hidden sheet-extra-stress" value="2"/><input type="radio" value="12" name="attr_stress" class="sheet-tooth sheet-xptooth"/><span></span>
 			</div>
-			<div class="sheet-stress3">
-				<div class="sheet-blackheader sheet-label">
-					<span name="attr_setting_trauma_label"></span>
+			<div class="sheet-blackheader sheet-stress1">
+					<div class="sheet-label">
+						<span name="attr_setting_stress_label"></span>
+					</div>
 				</div>
-				<!-- TRAUMA DON'T SPACE OUT -->
-				<div class="sheet-traumaholder sheet-flex">
-					<input type="radio" value="0" name="attr_trauma" class="sheet-tooth sheet-zero" checked/><span></span><input type="radio" value="1" name="attr_trauma" class="sheet-tooth sheet-regulartooth"/><span></span><input type="checkbox" name="attr_setting_extra_trauma" value="1" class="sheet-hidden sheet-toothhider"/><input type="radio" value="5" name="attr_trauma" class="sheet-tooth sheet-regulartooth"/><span></span>
+				<!-- STRESS DON'T SPACE OUT -->
+				<div class="sheet-blackheader sheet-stress3 ">
+					<span></span>
+					<input type="radio" value="0" name="attr_trauma" class="sheet-tooth sheet-zero" checked/><span></span><input type="radio" value="1" name="attr_trauma" class="sheet-tooth sheet-regulartooth"/><span></span>
 				</div>
-			</div>
 		</div>
 		<div class="sheet-flex-layout sheet-def-margin">
 			<!-- HARM -->
@@ -261,9 +262,7 @@
 						<input type="radio" name="attr_recovery" class="sheet-text-input" value="1"/><span>1</span>
 						<input type="radio" name="attr_recovery" class="sheet-text-input" value="2"/><span>2</span>
 						<input type="radio" name="attr_recovery" class="sheet-text-input" value="3"/><span>3</span>
-						<input type="radio" name="attr_recovery" class="sheet-text-input" value="4"/><span>4</span>
-						<input type="radio" name="attr_recovery" class="sheet-text-input" value="5"/><span>5</span>
-						<input type="radio" name="attr_recovery" class="sheet-text-input sheet-last" value="6"/><span>6</span>
+						<input type="radio" name="attr_recovery" class="sheet-text-input sheet-last" value="4"/><span>4</span>
 						<div class="sheet-clockpicture"></div>
 					</div>
 				</div>
@@ -287,9 +286,9 @@
 
             <!-- SPECIAL ABILITIES -->
 					<!-- XP DO NOT SPACE -->
-					<div class="sheet-col100 sheet-flex sheet-blackheader">
+					<div class="sheet-col100 sheet-stress sheet-flex sheet-blackheader">
 						<div class = "sheet-label">Playbook XP</div>
-						<div class="sheet-stress2 ">
+						<div class="sheet-stress3 ">
 					<input type="radio" value="0" name="attr_playbook_xp" class="sheet-tooth sheet-zero" checked/><span></span><input type="radio" value="1" name="attr_playbook_xp" class="sheet-tooth sheet-xptooth"/><span></span><input type="radio" value="2" name="attr_playbook_xp" class="sheet-tooth sheet-xptooth"/><span></span><input type="radio" value="3" name="attr_playbook_xp" class="sheet-tooth sheet-xptooth"/><span></span><input type="radio" value="4" name="attr_playbook_xp" class="sheet-tooth sheet-xptooth"/><span></span><input type="radio" value="5" name="attr_playbook_xp" class="sheet-tooth sheet-xptooth"/><span></span><input type="radio" value="6" name="attr_playbook_xp" class="sheet-tooth sheet-xptooth"/><span></span><input type="radio" value="7" name="attr_playbook_xp" class="sheet-tooth sheet-xptooth"/><span></span><input type="radio" value="8" name="attr_playbook_xp" class="sheet-tooth sheet-xptooth"/><span></span>
 				</div>
 			</div>
@@ -326,13 +325,15 @@
 		</div>
 		<!-- Attributes columns -->
 		<div class="sheet-col40">
-				<div class="sheet-col100 sheet-flex sheet-blackheader">
+				<div class="sheet-col100 sheet-flex sheet-blackheader sheet-stress">
 						<div class = "sheet-label">Grade</div>
-						<div class="sheet-stress2 ">
-						<input type="radio" value="0" name="attr_grade" class="sheet-tooth sheet-zero" checked/><span></span><input type="radio" value="1" name="attr_grade" class="sheet-tooth sheet-xptooth"/><span></span><input type="radio" value="2" name="attr_grade" class="sheet-tooth sheet-xptooth"/><span></span><input type="radio" value="3" name="attr_grade" class="sheet-tooth sheet-xptooth"/><span></span><input type="checkbox" name="attr_setting_extra_stress" class="sheet-hidden sheet-extra-stress" value="0" checked/><input type="radio" value="10" name="attr_grade" class="sheet-tooth sheet-xptooth"/><span></span><input type="checkbox" name="attr_setting_extra_stress" class="sheet-hidden sheet-extra-stress" value="1"/><input type="radio" value="11" name="attr_grade" class="sheet-tooth sheet-xptooth"/><span></span><input type="checkbox" name="attr_setting_extra_stress" class="sheet-hidden sheet-extra-stress" value="2"/><input type="radio" value="12" name="attr_grade" class="sheet-tooth sheet-xptooth"/><span></span>
+						<div class="sheet-stress3 ">
+						<input type="radio" value="0" name="attr_grade" class="sheet-tooth sheet-zero" checked="checked"/><span></span><input type="radio" value="1" name="attr_grade" class="sheet-tooth sheet-xptooth"/><span></span><input type="radio" value="2" name="attr_grade" class="sheet-tooth sheet-xptooth"/><span></span><input type="radio" value="3" name="attr_grade" class="sheet-tooth sheet-xptooth"/><span></span><input type="checkbox" name="attr_setting_extra_stress" class="sheet-hidden sheet-extra-stress" value="0" checked/><input type="radio" value="10" name="attr_grade" class="sheet-tooth sheet-xptooth"/><span></span><input type="checkbox" name="attr_setting_extra_stress" class="sheet-hidden sheet-extra-stress" value="1"/><input type="radio" value="11" name="attr_grade" class="sheet-tooth sheet-xptooth"/><span></span><input type="checkbox" name="attr_setting_extra_stress" class="sheet-hidden sheet-extra-stress" value="2"/><input type="radio" value="12" name="attr_grade" class="sheet-tooth sheet-xptooth"/><span></span>
 						</div>
 				</div>
+				<div class="sheet-col100"><span></span></div>
 			<!-- Realization -->
+			<div class="sheet-def-margin">
 			<div class="sheet-attribute">
 				<div class="sheet-attribute-title sheet-flex">
 					<button class="sheet-rollbutton sheet-attributebutton" type="roll" name="roll_Realization" value="&{template:bitd} {{charname=@{character_name}}} {{resist=1}} {{subtitle=resists @{consequence_query} with}} {{title-realization=1}} {{roll1=[[[[{[[@{realization}+@{resbonus_realization}+@{bonusdice}}]],1}kl1]]d6]]}} {{roll2=[[[[{[[@{realization}+@{resbonus_realization}+@{bonusdice}-1}]],1}kl1]]d6]]}} {{roll3=[[[[{[[@{realization}+@{resbonus_realization}+@{bonusdice}-2}]],1}kl1]]d6]]}} {{roll4=[[[[{[[@{realization}+@{resbonus_realization}+@{bonusdice}-3}]],1}kl1]]d6]]}} {{roll5=[[[[{[[@{realization}+@{resbonus_realization}+@{bonusdice}-4}]],1}kl1]]d6]]}} {{roll6=[[[[{[[@{realization}+@{resbonus_realization}+@{bonusdice}-5}]],1}kl1]]d6]]}} {{roll7=[[[[{[[@{realization}+@{resbonus_realization}+@{bonusdice}-6}]],1}kl1]]d6]]}} {{roll8=[[[[{[[@{realization}+@{resbonus_realization}+@{bonusdice}-7}]],1}kl1]]d6]]}} {{roll9=[[[[{[[@{realization}+@{resbonus_realization}+@{bonusdice}-8}]],1}kl1]]d6]]}} {{roll10=[[[[{[[@{realization}+@{resbonus_realization}+@{bonusdice}-9}]],1}kl1]]d6]]}} {{roll11=[[[[{[[@{realization}+@{resbonus_realization}+@{bonusdice}-10}]],1}kl1]]d6]]}} {{zerodice=[[[[{[[1-(@{realization}+@{resbonus_realization})-@{bonusdice}]],1}kl1]]d6]], [[[[{[[1-(@{realization}+@{resbonus_realization})-@{bonusdice}]],1}kl1]]d6]]}}">Realization
@@ -381,6 +382,7 @@
 					</div>
 				</div>
 			</div>
+		</div>
 			<!-- Tenacity -->
 			<div class="sheet-attribute">
 				<div class="sheet-attribute-title sheet-flex">
